--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc -b",
-    "dev": "node dist/index.js",
+    "build": "npm install && tsc -b",
+    "start": "node dist/index.js",
+    "dev": "tsc -b && node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
