--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -18,7 +18,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.0",
     "passport": "^0.7.0",
@@ -27,12 +27,14 @@
     "zod": "^4.0.14"
   },
   "devDependencies": {
-    "@types/bcrypt": "^6.0.0",
-    "@types/cookie-parser": "^1.4.9",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^24.1.0",
-    "ts-node-dev": "^2.0.0"
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/passport": "^1.0.7",
+    "@types/passport-github2": "*",
+    "@types/passport-google-oauth20": "^2.0.8",
+    "typescript": "^5.0.4"
   }
 }
