--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -111,5 +111,5 @@
     "skipLibCheck": true,                         /* Skip type checking all .d.ts files. */
     "typeRoots": ["./src/types", "./node_modules/@types"]
   },
-  "include": ["src"]
+  "include": ["src","src/types/express-extensions/**/*"]
 }
