--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,40 +1,1 @@
-{ 
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "build": "npm install && tsc -b",
-    "start": "node dist/index.js",
-    "dev": "tsc -b && node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "dependencies": {
-    "@types/express": "^5.0.3",
-    "bcrypt": "^6.0.0",
-    "cookie-parser": "^1.4.7",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.17.0",
-    "passport": "^0.7.0",
-    "passport-github2": "^0.1.12",
-    "passport-google-oauth20": "^2.0.0",
-    "zod": "^4.0.14"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/cookie-parser": "^1.4.9",
-    "@types/cors": "^2.8.19",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/passport": "^1.0.17",
-    "@types/passport-github2": "*",
-    "@types/passport-google-oauth20": "^2.0.8",
-    "typescript": "^5.0.4"
-  }
-}
+{"name":"server","version":"1.0.0","description":"","main":"index.js","scripts":{"build":"npm install && tsc -b","start":"node dist/index.js","dev":"tsc -b && node dist/index.js","test":"echo \"Error: no test specified\" && exit 1"},"keywords":[],"author":"","license":"ISC","type":"commonjs","dependencies":{"@types/express":"^5.0.3","bcrypt":"^6.0.0","cookie-parser":"^1.4.7","cors":"^2.8.5","dotenv":"^16.0.3","express":"^4.18.2","jsonwebtoken":"^9.0.2","mongoose":"^8.17.0","zod":"^4.0.14"},"devDependencies":{"@types/bcrypt":"^5.0.2","@types/cookie-parser":"^1.4.9","@types/cors":"^2.8.19","@types/jsonwebtoken":"^9.0.10","typescript":"^5.0.4"}}
